표지계약세(페이지조정)

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -1019,6 +1019,73 @@
                 height: auto !important;
                 overflow: visible !important;
             }
+
+            /* 표지계약서: 한 페이지에 맞추기 */
+            .print-cover.show-print {
+                transform: scale(0.75);
+                transform-origin: top left;
+                width: 133% !important;
+            }
+
+            .print-cover .document-wrapper {
+                padding: 5px !important;
+            }
+
+            .print-cover .doc-header {
+                padding: 10px 15px !important;
+            }
+
+            .print-cover .doc-content {
+                padding: 10px !important;
+            }
+
+            .print-cover .info-grid {
+                gap: 3px !important;
+            }
+
+            .print-cover .info-item {
+                padding: 3px 5px !important;
+            }
+
+            .print-cover .info-item label {
+                font-size: 8px !important;
+            }
+
+            .print-cover .info-item input,
+            .print-cover .info-item span {
+                font-size: 10px !important;
+            }
+
+            .print-cover table {
+                font-size: 9px !important;
+            }
+
+            .print-cover table th,
+            .print-cover table td {
+                padding: 3px 5px !important;
+            }
+
+            .print-cover .signature-section {
+                margin-top: 10px !important;
+                gap: 10px !important;
+            }
+
+            .print-cover .signature-card {
+                padding: 8px !important;
+            }
+
+            .print-cover .sig-field {
+                margin-bottom: 3px !important;
+            }
+
+            .print-cover .sig-field label {
+                font-size: 8px !important;
+            }
+
+            .print-cover .sig-field input {
+                font-size: 9px !important;
+                padding: 3px !important;
+            }
         }
 
         /* 문서 래퍼 */
