--- a/portfolio.html
+++ b/portfolio.html
@@ -560,12 +560,12 @@
 <body>
     <header class="header">
         <div class="header-container">
-            <a href="index.html" class="logo">DESIGN JIG</a>
+            <a href="/" class="logo">DESIGN JIG</a>
             <nav>
                 <ul class="nav-list">
-                    <li><a href="columns.html" class="nav-link">COLUMNS</a></li>
-                    <li><a href="portfolio.html" class="nav-link active">PORTFOLIO</a></li>
-                    <li><a href="quote.html" class="nav-link nav-link-cta">ASK A QUOTE</a></li>
+                    <li><a href="/columns" class="nav-link">COLUMNS</a></li>
+                    <li><a href="/portfolio" class="nav-link active">PORTFOLIO</a></li>
+                    <li><a href="/quote" class="nav-link nav-link-cta">ASK A QUOTE</a></li>
                 </ul>
             </nav>
             <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="메뉴">
@@ -578,9 +578,9 @@
 
     <!-- 모바일 네비게이션 -->
     <nav class="mobile-nav" id="mobileNav">
-        <a href="columns.html">COLUMNS</a>
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="quote.html" class="nav-cta">ASK A QUOTE</a>
+        <a href="/columns">COLUMNS</a>
+        <a href="/portfolio">PORTFOLIO</a>
+        <a href="/quote" class="nav-cta">ASK A QUOTE</a>
     </nav>
     </header>
 
@@ -610,12 +610,12 @@
         <!-- 라이트박스 내 헤더 -->
         <header class="lightbox-header">
             <div class="lightbox-header-container">
-                <a href="index.html" class="lightbox-logo">DESIGN JIG</a>
+                <a href="/" class="lightbox-logo">DESIGN JIG</a>
                 <nav>
                     <ul class="lightbox-nav">
-                        <li><a href="columns.html" class="lightbox-nav-link">COLUMNS</a></li>
-                        <li><a href="portfolio.html" class="lightbox-nav-link active">PORTFOLIO</a></li>
-                        <li><a href="quote.html" class="lightbox-nav-link lightbox-nav-cta">ASK A QUOTE</a></li>
+                        <li><a href="/columns" class="lightbox-nav-link">COLUMNS</a></li>
+                        <li><a href="/portfolio" class="lightbox-nav-link active">PORTFOLIO</a></li>
+                        <li><a href="/quote" class="lightbox-nav-link lightbox-nav-cta">ASK A QUOTE</a></li>
                     </ul>
                 </nav>
             </div>
