--- a/quote.html
+++ b/quote.html
@@ -428,12 +428,12 @@
 <body>
     <header class="header">
         <div class="header-container">
-            <a href="index.html" class="logo">디자인 지그</a>
+            <a href="/" class="logo">디자인 지그</a>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li><a href="columns.html" class="nav-link">COLUMNS</a></li>
-                    <li><a href="portfolio.html" class="nav-link">PORTFOLIO</a></li>
-                    <li><a href="quote.html" class="nav-link nav-link-cta active">ASK A QUOTE</a></li>
+                    <li><a href="/columns" class="nav-link">COLUMNS</a></li>
+                    <li><a href="/portfolio" class="nav-link">PORTFOLIO</a></li>
+                    <li><a href="/quote" class="nav-link nav-link-cta active">ASK A QUOTE</a></li>
                 </ul>
             </nav>
             <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="메뉴">
@@ -446,9 +446,9 @@
 
     <!-- 모바일 네비게이션 -->
     <nav class="mobile-nav" id="mobileNav">
-        <a href="columns.html">COLUMNS</a>
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="quote.html" class="nav-cta">ASK A QUOTE</a>
+        <a href="/columns">COLUMNS</a>
+        <a href="/portfolio">PORTFOLIO</a>
+        <a href="/quote" class="nav-cta">ASK A QUOTE</a>
     </nav>
 
     <main>
