Fix: mobile order, portfolio loading, broken code, and update footer to Rimdesign

--- a/columns.html
+++ b/columns.html
@@ -568,7 +568,7 @@
                 </svg>
             </a>
         </div>
-        <p class="footer-copyright">© 2024 디자인 지그. All rights reserved.</p>
+        <p class="footer-copyright">Copyright Rimdesign interior. All Right Reserved.</p>
     </footer>
 
     <script>
