--- a/index.html
+++ b/index.html
@@ -592,8 +592,13 @@
             }
 
             .feature-container.reverse .feature-image,
-            .feature-container.reverse .feature-content {
-                order: unset;
+            .feature-container .feature-image {
+                order: 1;
+            }
+
+            .feature-container.reverse .feature-content,
+            .feature-container .feature-content {
+                order: 2;
             }
 
             .feature-title {
@@ -937,7 +942,7 @@
             </div>
 
             <div class="footer-copyright">
-                <p>&copy; 2024 디자인 지그. All rights reserved.</p>
+                <p>Copyright Rimdesign interior. All Right Reserved.</p>
             </div>
         </div>
     </footer>
