Update 3 feature sections content as per user request

--- a/index.html
+++ b/index.html
@@ -727,13 +727,12 @@
                             <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                             <polyline points="9 22 9 12 15 12 15 22"></polyline>
                         </svg>
-                        주거 공간 전문
+                        맞춤형 공간 설계
                     </div>
                     <h2 class="feature-title">당신만의 안식처를<br>완성합니다</h2>
                     <p class="feature-description">
-                        편안하고 스타일리시한 나만의 공간으로 변화시켜 드립니다.
-                        생활 동선부터 수납, 조명까지 세심하게 설계하여
-                        매일 돌아가고 싶은 집을 만들어 드립니다.
+                        좋은 집은 화려하지 않아도 됩니다. 문을 열고 들어서는 순간 '집에 왔다'는 안도감,
+                        소파에 앉아 하루를 내려놓을 수 있는 편안함. 디자인지그는 그런 공간을 만듭니다.
                     </p>
                     <ul class="feature-list">
                         <li>
@@ -741,21 +740,21 @@
                                 stroke="currentColor" stroke-width="2">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
-                            생활 동선 최적화 설계
+                            생활 동선을 고려한 맞춤 설계
                         </li>
                         <li>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
-                            맞춤형 수납 솔루션
+                            실용성과 내구성을 갖춘 자재 선택
                         </li>
                         <li>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
-                            프리미엄 자재 사용
+                            10년 뒤에도 튼튼한 시공 품질
                         </li>
                     </ul>
                     <a href="/portfolio" class="btn-feature">시공 사례 보기</a>
@@ -782,9 +781,8 @@
                     </div>
                     <h2 class="feature-title">기본에 충실한<br>시공 품질</h2>
                     <p class="feature-description">
-                        화려한 포트폴리오보다 튼튼하고 오래가는 시공을 약속합니다.
-                        현장 경험에서 쌓은 노하우로 보이지 않는 곳까지
-                        꼼꼼하게 마감합니다.
+                        화려한 마감재 뒤에 숨은 설비, 방수, 단열 등 보이지 않는 곳일수록 더 꼼꼼해야 합니다.
+                        10년 이상 현장을 경험한 소장이 직접 관리하며 끝까지 책임집니다.
                     </p>
                     <ul class="feature-list">
                         <li>
@@ -826,11 +824,10 @@
                         </svg>
                         맞춤형 솔루션
                     </div>
-                    <h2 class="feature-title">고객 맞춤<br>토탈 솔루션</h2>
+                    <h2 class="feature-title">고객의 자산을<br>더 빛나게</h2>
                     <p class="feature-description">
-                        고객님의 예산, 취향, 라이프스타일에 맞춘
-                        최적의 인테리어 솔루션을 제안합니다.
-                        상담부터 시공, 사후관리까지 원스톱으로 진행됩니다.
+                        집은 단순한 공간이 아니라 소중한 자산입니다. 디자인지그는 예산과 라이프스타일에 맞는
+                        제안으로 그 가치를 더 높여드립니다. 상담부터 시공, 사후관리까지 한 팀이 끝까지 함께합니다.
                     </p>
                     <ul class="feature-list">
                         <li>
@@ -838,14 +835,14 @@
                                 stroke="currentColor" stroke-width="2">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
-                            무료 현장 상담
+                            합리적인 견적 시스템
                         </li>
                         <li>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
-                            합리적인 견적 시스템
+                            과잉 시공 없는 정직한 제안
                         </li>
                         <li>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
