--- a/index.html
+++ b/index.html
@@ -195,75 +195,6 @@
             border-radius: 6px;
         }
 
-        .slider-arrow {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background: transparent;
-            border: none;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            transition: all 0.3s ease;
-            z-index: 100;
-            padding: 10px 0;
-            font-family: inherit;
-        }
-
-        .slider-arrow .arrow-text {
-            font-size: 0.9rem;
-            font-weight: 500;
-            color: #666;
-            position: relative;
-            transition: color 0.3s ease;
-        }
-
-        .slider-arrow .arrow-text::after {
-            content: '';
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-            width: 0;
-            height: 1px;
-            background: #1a1a1a;
-            transition: width 0.3s ease;
-        }
-
-        .slider-arrow:hover .arrow-text {
-            color: #1a1a1a;
-        }
-
-        .slider-arrow:hover .arrow-text::after {
-            width: 100%;
-        }
-
-        .slider-arrow .arrow-icon {
-            font-size: 1.2rem;
-            color: #666;
-            transition: color 0.3s ease, transform 0.3s ease;
-        }
-
-        .slider-arrow:hover .arrow-icon {
-            color: #1a1a1a;
-        }
-
-        .slider-arrow.prev {
-            left: 2rem;
-        }
-
-        .slider-arrow.prev:hover .arrow-icon {
-            transform: translateX(-3px);
-        }
-
-        .slider-arrow.next {
-            right: 2rem;
-        }
-
-        .slider-arrow.next:hover .arrow-icon {
-            transform: translateX(3px);
-        }
-
         /* Buttons */
         .btn {
             padding: 1rem 2.5rem;
@@ -608,22 +539,6 @@
             .column-grid {
                 grid-template-columns: 1fr;
             }
-
-            .slider-arrow {
-                padding: 8px 0;
-            }
-
-            .slider-arrow .arrow-text {
-                font-size: 0.8rem;
-            }
-
-            .slider-arrow.prev {
-                left: 1rem;
-            }
-
-            .slider-arrow.next {
-                right: 1rem;
-            }
         }
     </style>
 </head>
@@ -698,16 +613,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Navigation Arrows -->
-            <button class="slider-arrow prev" id="prevSlide">
-                <span class="arrow-icon">‹</span>
-                <span class="arrow-text">Prev</span>
-            </button>
-            <button class="slider-arrow next" id="nextSlide">
-                <span class="arrow-text">Next</span>
-                <span class="arrow-icon">›</span>
-            </button>
 
             <!-- Navigation Dots -->
             <div class="slider-nav">
@@ -979,19 +884,7 @@
             clearInterval(autoplayInterval);
         }
 
-        // Event listeners
-        document.getElementById('nextSlide').addEventListener('click', () => {
-            nextSlide();
-            stopAutoplay();
-            startAutoplay();
-        });
-
-        document.getElementById('prevSlide').addEventListener('click', () => {
-            prevSlide();
-            stopAutoplay();
-            startAutoplay();
-        });
-
+        // Event listeners for dots
         dots.forEach((dot, index) => {
             dot.addEventListener('click', () => {
                 showSlide(index);
@@ -1004,11 +897,12 @@
         startAutoplay();
 
         // Mobile menu toggle
-        document.getElementById('mobileMenuBtn').addEventListener('click', function() {
+        document.getElementById('mobileMenuBtn').addEventListener('click', function () {
             document.getElementById('nav').classList.toggle('active');
             this.classList.toggle('active');
         });
     </script>
     <script src="/js/coming-soon.js"></script>
 </body>
+
 </html>
