--- a/index.html
+++ b/index.html
@@ -610,10 +610,48 @@
 
             .nav {
                 display: none;
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100vh;
+                background: rgba(255, 255, 255, 0.98);
+                z-index: 999;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .nav.active {
+                display: flex;
+            }
+
+            .nav.active .nav-list {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 2rem;
+            }
+
+            .nav.active .nav-link {
+                font-size: 1.5rem;
             }
 
             .mobile-menu-btn {
                 display: block;
+                z-index: 1001;
+            }
+
+            .mobile-menu-btn.active span:nth-child(1) {
+                transform: rotate(45deg) translate(5px, 5px);
+            }
+
+            .mobile-menu-btn.active span:nth-child(2) {
+                opacity: 0;
+            }
+
+            .mobile-menu-btn.active span:nth-child(3) {
+                transform: rotate(-45deg) translate(5px, -5px);
             }
 
             .feature-container {
