Add Open Graph meta tags for social media link previews

--- a/columns.html
+++ b/columns.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COLUMNS - 디자인 지그</title>
+    <meta name="description" content="인테리어 가이드, 시공 팁, 디자인 이야기를 확인해보세요.">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.designjig.com/columns">
+    <meta property="og:title" content="COLUMNS - 디자인 지그">
+    <meta property="og:description" content="인테리어 가이드, 시공 팁, 디자인 이야기를 확인해보세요.">
+    <meta property="og:image"
+        content="https://res.cloudinary.com/designjig/image/upload/v1766493883/profileImage_m2djrt.png">
+    <meta property="og:site_name" content="디자인 지그">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
