--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>디자인 지그 - 깔끔하고 시대를 초월한 인테리어 경험</title>
     <meta name="description" content="디자인 지그는 아름답고 기능적인 공간을 만듭니다. 포트폴리오를 둘러보고, 인테리어 인사이트를 확인하거나, 견적을 요청하세요.">
+
+    <!-- Open Graph (Facebook, KakaoTalk, etc.) -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.designjig.com/">
+    <meta property="og:title" content="디자인 지그 - 깔끔하고 시대를 초월한 인테리어 경험">
+    <meta property="og:description" content="디자인 지그는 아름답고 기능적인 공간을 만듭니다. 포트폴리오를 둘러보고, 인테리어 인사이트를 확인하거나, 견적을 요청하세요.">
+    <meta property="og:image"
+        content="https://res.cloudinary.com/designjig/image/upload/v1766493883/profileImage_m2djrt.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="디자인 지그">
+    <meta property="og:locale" content="ko_KR">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="디자인 지그 - 깔끔하고 시대를 초월한 인테리어 경험">
+    <meta name="twitter:description" content="디자인 지그는 아름답고 기능적인 공간을 만듭니다.">
+    <meta name="twitter:image"
+        content="https://res.cloudinary.com/designjig/image/upload/v1766493883/profileImage_m2djrt.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
