--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO - 디자인 지그</title>
+    <meta name="description" content="디자인 지그의 인테리어 시공 사례를 확인하세요.">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.designjig.com/portfolio">
+    <meta property="og:title" content="PORTFOLIO - 디자인 지그">
+    <meta property="og:description" content="디자인 지그의 인테리어 시공 사례를 확인하세요.">
+    <meta property="og:image"
+        content="https://res.cloudinary.com/designjig/image/upload/v1766493883/profileImage_m2djrt.png">
+    <meta property="og:site_name" content="디자인 지그">
+
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+KR:wght@400;500;700&display=swap"
         rel="stylesheet">
