--- a/quote.html
+++ b/quote.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>견적 문의 - 디자인 지그</title>
+    <meta name="description" content="디자인 지그에 인테리어 견적을 문의하세요.">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.designjig.com/quote">
+    <meta property="og:title" content="견적 문의 - 디자인 지그">
+    <meta property="og:description" content="디자인 지그에 인테리어 견적을 문의하세요.">
+    <meta property="og:image"
+        content="https://res.cloudinary.com/designjig/image/upload/v1766493883/profileImage_m2djrt.png">
+    <meta property="og:site_name" content="디자인 지그">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
