--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>디자인 지그 - 깔끔하고 시대를 초월한 인테리어 경험</title>
-    <meta name="description" content="디자인 지그는 아름답고 기능적인 공간을 만듭니다. 포트폴리오를 둘러보고, 인테리어 인사이트를 확인하거나, 견적을 요청하세요.">
+    <title>디자인지그 - 오래 살수록, 더 좋아지는 집</title>
+    <meta name="description" content="오래 살수록, 더 좋아지는 집. 디자인지그가 만듭니다.">
 
     <!-- Open Graph (Facebook, KakaoTalk, etc.) -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.designjig.com/">
-    <meta property="og:title" content="디자인 지그 - 깔끔하고 시대를 초월한 인테리어 경험">
-    <meta property="og:description" content="디자인 지그는 아름답고 기능적인 공간을 만듭니다. 포트폴리오를 둘러보고, 인테리어 인사이트를 확인하거나, 견적을 요청하세요.">
+    <meta property="og:title" content="디자인지그 - 오래 살수록, 더 좋아지는 집">
+    <meta property="og:description" content="오래 살수록, 더 좋아지는 집. 디자인지그가 만듭니다.">
     <meta property="og:image"
         content="https://res.cloudinary.com/designjig/image/upload/v1766493883/profileImage_m2djrt.png">
     <meta property="og:image:width" content="1200">
