Update slide 2 description for better mobile readability

--- a/index.html
+++ b/index.html
@@ -744,8 +744,9 @@
                     <p class="slide-subtitle">Quality First</p>
                     <h1 class="slide-title">보이지 않는 곳부터<br>다릅니다</h1>
                     <p class="slide-description">
-                        마감에 가려진 설비, 방수, 단열. 대부분 쉽게 넘기지만, 이 기본이 무너지면 삶의 질도 무너집니다.<br>
-                        디자인지그는 눈에 보이지 않는 곳부터 제대로 잡습니다.
+                        설비, 방수, 단열 — 마감 뒤에 숨은 기본기.<br>
+                        이 기본이 무너지면 삶의 질도 무너집니다.<br>
+                        디자인지그는 보이지 않는 곳부터 제대로 잡습니다.
                     </p>
                     <div class="slide-cta">
                         <a href="/portfolio" class="btn btn-primary">포트폴리오 보기</a>
