비밀번호 변경

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2759,7 +2759,7 @@
     <script>
         // 관리자 페이지 비밀번호 확인
         (function () {
-            const ACCESS_PASSWORD = '6454';
+            const ACCESS_PASSWORD = 'WONPRO6454';
             const SESSION_KEY = 'designzig_admin_access';
 
             // 이미 인증된 세션인지 확인
@@ -4425,7 +4425,7 @@
         });
 
         // 기본 비밀번호
-        const DEFAULT_PASSWORD = '6454';
+        const DEFAULT_PASSWORD = 'W6454';
 
         // 초기화 시 기본 비밀번호 설정
         if (!localStorage.getItem('dz_admin_password_new')) {
