--- a/index.html
+++ b/index.html
@@ -983,7 +983,8 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                         fill="currentColor">
                         <path
-                            d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.894 8.221l-1.97-.001c-.628 0-.766.298-.766.738v1.267h2.639l-.344 2.67h-2.295v6.843h-2.762v-6.843H9.928v-2.67h2.468V8.688c0-2.445 1.494-3.778 3.677-3.778 1.044 0 1.943.078 2.205.113v2.598h-.384z" />
+                            d="M4 4h13v2h1c1.1 0 2 .9 2 2v3c0 1.1-.9 2-2 2h-1v1c0 2.21-1.79 4-4 4H8c-2.21 0-4-1.79-4-4V4zm13 7h1V8h-1v3zM6 6v8c0 1.1.9 2 2 2h5c1.1 0 2-.9 2-2V6H6z" />
+                        <path d="M2 20h20v2H2z" />
                     </svg>
                 </a>
                 <a href="https://www.instagram.com/design__jig" class="sns-link" target="_blank"
